# pokerbot

./: CMakeLists.txt
src/: Board.cpp  Board.hpp  CMakeLists.txt  Card.cpp  Card.hpp  Error.hpp  Hand.cpp  Hand.hpp  adrien.cpp  test_Board.cpp  test_Card.cpp  test_Hand.cpp
test/: CMakeLists.txt  test_Board.cpp  test_Card.cpp  test_Combination.cpp  test_Hand.cpp
